welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
nums==T
for (i <- 0 to T.length-1) {
	
	if (T(i)==value){
		return i
	}
	else return -1
}
}
